--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
 <title>Camera Access</title>
 </head>
 <body>
-<input type="file" capture="user" accept="video/*"> Find </input>
+  <div>
+    <label for="file-upload" class="custom-file-upload">
+     Show
+</label>
+<input id ="file-upload" type="file" capture="user" accept="video/*"> Find </input>
+  </div>
+  
 </body>
 </html>
