--- a/index.html
+++ b/index.html
@@ -2,6 +2,17 @@
 <html>
 <head>
 <title>Camera Access</title>
+  <style>
+    input[type="file"] {
+    display: none;
+}
+.custom-file-upload {
+    border: 1px solid #ccc;
+    display: inline-block;
+    padding: 6px 12px;
+    cursor: pointer;
+}
+  </style>
 </head>
 <body>
   <div>
