--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <label for="file-upload" class="custom-file-upload">
      Show
 </label>
-<input id ="file-upload" type="file" capture="user" accept="video/*"> Find </input>
+<input id ="file-upload" type="file" capture="user" accept="video/*">
   </div>
   
 </body>
