--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Camera Access</title>
+<title>WEBSITE</title>
   <style>
     input[type="file"] {
     display: none;
